--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                                     <ul>
                                         <li><a href="index.html">HOME</a></li>
                                         <li><a href="about.html">ABOUT US</a></li>                                       
-										<li><a href="gallery.html">Testimonal</a></li>
+										<li><a href="gallery.html">Testimonial</a></li>
                                         <li><a href="services.html">Achievements</a></li>
 										<li><a href="contact.html">CONTACT US</a></li>
                                     </ul>
@@ -84,7 +84,7 @@
                                     <ul class="menu-overflow">
                                         <li><a href="index.html">HOME</a></li>
                                         <li><a href="about.html">ABOUT US</a></li>                                       
-										<li><a href="gallery.html">Testimonal</a></li>
+										<li><a href="gallery.html">Testimonial</a></li>
                                         <li><a href="services.html">Achievements</a></li>
 										<li><a href="contact.html">CONTACT US</a></li>
                                     </ul>
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="about-us-img pr-30 wow fadeInLeft">
-                            <img alt="" src="assets/img/about3.jpg">
+                            <img alt="" src="assets/img/about6.jpg">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 d-flex align-items-center">
@@ -112,13 +112,15 @@
                        <p><h4>Hi</h4></p>
 <h5>I'm <b><u>Afreen Naaz</u></b></h5><br>
 A certified business coach & Meta ads expert.<br><br>
-She's working on Women empowerment in India to support. She's not only foster skills and reliable income but also generate an impressive income 2 lakh in just 3 Month's.
-Afreen is dedicated to empowering women, mentoring 250+ girl's through guidance and valuable skills.<br><br></p>
+I am working on Women empowerment in India to support. I am not only foster skills and reliable income but also generate 
+an impressive income 2 lakh in just 3 Month's.
+I dedicated to empowering women, mentoring 250+ girl's through guidance and valuable skills.<br><br></p>
 				 <p><b>Business consultant:-</b><br>
-Afreen is  business Consultant & meta ads expert she provides how freelancing can bring in stead income using halal source. She teach practical  skills . Her working experience show the really care about making work better for every one.</p><br>
-<p>Being  a student. I managed  to work with this amazing platfrom by up skilling my self. 
-Through my mentorship many girl's became financially independent. By the own comfort zone 
-Many girl's are learning  & growing with me</p><br><br><br><br><br>
+Afreen is  business Consultant & meta ads expert I provides how freelancing can bring in stead income using halal source. 
+I teach practical  skills . My working experience show the really care about making work better for every one.</p><br>
+<p>>Being  a student. I managed  to work with this amazing platfrom by up skilling my self. 
+Through my mentorship many girls became financially independent. By the own comfort zone 
+Many girls are learning  & growing with me</p><br><br><br><br><br>
                            
                             <div class="about-us-btn">
                                 <a class="btn-style" href="contact.html">CONTACT US</a>
