--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Afreenaaz - Testimonal</title>
+        <title>Afreenaaz - Testimonial</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://use.fontawesome.com/5c72a22c0f.js"></script>
@@ -63,7 +63,7 @@
                                     <ul>
                                         <li><a href="index.html">HOME</a></li>
                                         <li><a href="about.html">ABOUT US</a></li>                                       
-										<li><a href="gallery.html">Testimonal</a></li>
+										<li><a href="gallery.html">Testimonial</a></li>
                                         <li><a href="services.html">Achievements</a></li>
 										<li><a href="contact.html">CONTACT US</a></li>
                                     </ul>
@@ -84,7 +84,7 @@
                                     <ul class="menu-overflow">
                                         <li><a href="index.html">HOME</a></li>
                                         <li><a href="about.html">ABOUT US</a></li>                                       
-										<li><a href="gallery.html">Testimonal</a></li>
+										<li><a href="gallery.html">Testimonial</a></li>
                                         <li><a href="services.html">Achievements</a></li>
 										<li><a href="contact.html">CONTACT US</a></li>
                                     </ul>
@@ -99,10 +99,10 @@
 		 <div class="breadcrumb-area pt-95 pb-95 bg-img" style="background-image:url(assets/img/banner/banner-2.jpg);">
             <div class="container">
                 <div class="breadcrumb-content text-center">
-                    <h2>Testimonal</h2>
+                    <h2>Testimonial</h2>
                     <ul>
                         <li><a href="index.html">home</a></li>
-                        <li class="active">Testimonal</li>
+                        <li class="active">Testimonial</li>
                     </ul>
                 </div>
             </div>
@@ -264,11 +264,147 @@
    
     <!-- /item-gallery -->
 </div>
- <!-- /wrapper-gallery -->   </div></div><br>
+ <!-- /wrapper-gallery -->   </div></section><br><br><br><br>
   
 
 
-
+	<div class="section-title text-center mb-50">
+                    <h4></h4>
+                    <h2 style="font-family:Pacifico, cursive; color:#e91e63">Testimonial</h2>
+                </div>
+		<div class="testimonial-area pt-90 pb-70 bg-img" style="background-image:url(assets/img/banner/banner-4.jpg);">
+		
+		<div class="section-title text-center mb-50">
+                    <h4></h4>
+                    <h3 style="font-family:Pacifico, cursive; color:#e91e63;">What my clients say!!!</h3>
+                </div>
+		    <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 ml-auto mr-auto">
+                        <div class="testimonial-wrap">
+                            <div class="testimonial-text-slider text-center">
+                                <div class="sin-testiText">
+                                    <p style="color:#000;">"Assalamualaikum afreen sis alhamdulillah i achieved 50k  above earning under your guidance 🔥🔥
+Allah pak apko hmesha khush rkhe apko aur kamyab kre Mai kitna khush hu ap❤❤ko bta nhi skti ap jaisi mentor mujhe
+ mili ap jaise support krti hai koi kr hi nhi skta hai ✅"<br> <b>By - Arnab Fakhri</b></p>
+                                </div>
+                                <div class="sin-testiText">
+                                    <p style="color:#000;">“Assalamualaikum afreen mam 
+Alhamdulillah alhamdulillah meri first earning ho gyi hai just because of you..... ❤😌
+Allah pak apko or kamyabi aata hai ❤
+Ap sirf isi trh hme support krti rhe 🥰”<br> <b>By - Arzoo</b></p>
+                                </div>
+                                <div class="sin-testiText">
+                                    <p style="color:#000;">“Assalamu alaikum mam afreen mam alhamdulillah alhamdulillah meri 
+									fr se earning hogay🥳🥳i hai...4000 Kal hi allah ka sukhur hai ke aapke through is 
+									idp men aayi aur meri mehnat aapki training kaam aagyi mam...!!thank you so much mam 
+									aise hi hume guid karte rehna take my b aapki tarha 6 figure earner ban jaun..mujhe apni 
+									ammi ke liye bhut kuch karna hai mam aur ye 9 to 5 job karke nahi ho skata kyunke karche hi 
+									nikal jate hai monthly 10k men aur yanha sirf din ke 4k kama kar hum wo kushi apne parent's 
+									ko de sakte hain Jo actually men hum uneh dena chate hain🩵
+Again thank you so much afreen mam ❤❤🥰"<br> <b>By - Kubra Zohra</b></p>
+                                </div>
+                                <div class="sin-testiText">
+                                    <p style="color:#000;">"Assalamualaikum afreen  appi alhamdulillah aj mai 1lakh+ earning kr chuki 
+									hu sbse phle to Allah ka bahut shukr o ehsan hai ki is mukam tk pahuchaya & second thing 
+									ki apne itna support kiya apki traning ne itna support kiya aj mai jis jgh pe hu sbse pehle 
+									Allah ka shukr ada krti hu fr apka apka jo support, guidance hai usse hi sikh kr mai yha tk 
+									pahuchi hu alhamdulillah allahumma barik 🥳🔥🥰"<br> <b>By - Razakeen Fatima</b></p>
+                                </div>
+								<div class="sin-testiText">
+                                    <p style="color:#000;">“Hello afreen mam 
+Finally meri first earning ho gyi hai Allah ka bhut bhut shukr hai ki maine right time pe right decision liye or right mentor 
+chune alhamdulillah 🔥🥳Aj apki support Or guidance ki wjah se mai ye kr payi sbse jyada role apki training ka rha meri 
+success le pichhe alhamdulillah ap traning bhut acchi deti hai ❤Allah apko hmesha apne hifz o aman me rkhe Or kamyabi 
+ata kre apko 🥰😌”<br> <b>By - Runa Naaz</b></p>
+                                </div>
+								<div class="sin-testiText">
+                                    <p style="color:#000;">“Assalamualaikum afreen mam aj mai bahut khush hu alhamdulillah meri first earning ho gyi hai ye sb apki wjh se possible ho paya  hai  as a mother mai decision lene se dr rhi thi but apne bahut hi simple way me sari chije clear krwayi thi aj bhi mujhe yad hai 🥰 agr mai us time right decision na leti to mujhe aj bahut afsos hota lekin Allah pak ka karam aur apki guidance ki wjh se mai ye kar payi allahumma barik ✨🔥
+Thank you so much meri bahen afreen ❤”<br> <b>By - Shifa Khan</b></p>
+                                </div>
+								<div class="sin-testiText">
+                                    <p style="color:#000;">“Asslamualaikum appi  Alhamdulillah meri  income 1lakh+ ho gyi hai maine socha nhi tha  ki mai at the 19age me itni earning kr lugi bs ye sb Allah ka hai karam hai Or 
+apka support meri appi jaan & apka jitna shukriya ada kru utha km hai mai apko bta nhi skti mai kitni khush hu ❤🥰
+Thank you so much afreen appi 😌 Allah pak apko kamyab kre or buri nazr se bachaye ameen ✨✨.”<br> <b>By - Asna Fatima</b></p>
+                                </div>
+								<div class="sin-testiText">
+                                    <p style="color:#000;">“Assalamu alaikum  afreen mam 
+Meri 60+ earning ho chuki hai just because of you & your support, guidance  & traning 
+Mai yha pe jo sikha ap se hi first time to lg rha tha kahi koi fraud to nhi hai scam to nhi hai fir bhi maine Allah ka name lekr  strat kiya aj mujhe khushu ho rhi ki mera decision wrong nhi tha 
+Allah ka shukr hai jo itni pyari mentor mili Allah apko hmesha khush rkhe apki har jayez tmanna puri kre ameen ❤😌”<br> <b>By - Swaleha Bano</b></p>
+                                </div>
+								<div class="sin-testiText">
+                                    <p style="color:#000;">“Assalamualaikum aaj main bahut khush hoon💖 Alhamdulillah is 
+									platform se Maine bahut kuchh sikha hai 🤩💫Afreen ma'am aap ki wajah se Allah aapko aur 
+									mujhe kamyabi de Ameen🤲”<br> <b>By - Saba Khalifa</b></p>
+                                </div>
+								<div class="sin-testiText">
+                                    <p style="color:#000;">“Afreen appi meri first earning ho gyi  thank you so much itna accha platform dene ke liye mai  kitni khush hu apko bta nhi skti 😍😍
+Allah apko aur kamyab kre ap hmesha hme isi trh support krti rhe 😌
+Thank you appi jani❤”<br> <b>By - Sadiya Ruman</b></p>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="testimonial-image-slider text-center">
+                                <div class="sin-testiImage">
+                                    <img src="assets/img/testi/1.jpg" alt="">
+                                    <h3 style="color:#000;">Arnab Fakhri</h3>
+                                    <h5></h5>
+                                </div>
+                                <div class="sin-testiImage">
+                                    <img src="assets/img/testi/2.jpg" alt="">
+                                    <h3 style="color:#000;">Arzoo</h3>
+                                    <h5></h5>
+                                </div>
+                                <div class="sin-testiImage">
+                                    <img src="assets/img/testi/3.jpg" alt="">
+                                    <h3 style="color:#000;">Kubra Zohra</h3>
+                                    <h5></h5>
+                                </div>
+                                <div class="sin-testiImage">
+                                    <img src="assets/img/testi/4.jpg" alt="">
+                                    <h3 style="color:#000;">Razakeen Fatima</h3>
+                                    <h5></h5>
+                                </div>
+								<div class="sin-testiImage">
+                                    <img src="assets/img/testi/5.jpg" alt="">
+                                    <h3 style="color:#000;">Runa Naaz</h3>
+                                    <h5></h5>
+                                </div>
+								<div class="sin-testiImage">
+                                    <img src="assets/img/testi/6.jpg" alt="">
+                                    <h3 style="color:#000;">Shifa khan</h3>
+                                    <h5></h5>
+                                </div>
+								<div class="sin-testiImage">
+                                    <img src="assets/img/testi/7.jpg" alt="">
+                                    <h3 style="color:#000;">Asna Fatima</h3>
+                                    <h5></h5>
+                                </div>
+								<div class="sin-testiImage">
+                                    <img src="assets/img/testi/8.jpg" alt="">
+                                    <h3 style="color:#000;">Swaleha Bano</h3>
+                                    <h5></h5>
+                                </div>
+								<div class="sin-testiImage">
+                                    <img src="assets/img/testi/9.jpg" alt="">
+                                    <h3 style="color:#000;">Saba khalifa</h3>
+                                    <h5></h5>
+                                </div>
+								<div class="sin-testiImage">
+                                    <img src="assets/img/testi/10.jpg" alt="">
+                                    <h3 style="color:#000;">Sadiya Ruman</h3>
+                                    <h5></h5>
+                                </div>
+                            </div>
+                            <div class="testimonial-shap">
+                                <img src="assets/img/icon-img/testi-shap-2.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+		</div>
 
 
 
