--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                                     <ul>
                                         <li><a href="index.html">HOME</a></li>
                                         <li><a href="about.html">ABOUT US</a></li>                                       
-										<li><a href="gallery.html">Testimonal</a></li>
+										<li><a href="gallery.html">Testimonial</a></li>
                                         <li><a href="services.html">Achievements</a></li>
 										<li><a href="contact.html">CONTACT US</a></li>
                                     </ul>
@@ -84,7 +84,7 @@
                                     <ul class="menu-overflow">
                                         <li><a href="index.html">HOME</a></li>
                                         <li><a href="about.html">ABOUT US</a></li>                                       
-										<li><a href="gallery.html">Testimonal</a></li>
+										<li><a href="gallery.html">Testimonial</a></li>
                                         <li><a href="services.html">Achievements</a></li>
 										<li><a href="contact.html">CONTACT US</a></li>
                                     </ul>
