--- a/about.html
+++ b/about.html
@@ -107,14 +107,14 @@
                     </div>
                     <div class="col-lg-6 col-md-6 d-flex align-items-center">
                         <div class="about-us-content">
-                            <h2 style="color:#e91e63">About Afreen Naaz!</h2><br>
+                            <h2 style="color:#e91e63"><u>About Afreen Naaz!</u></h2><br>
                                  
                        <p><h4>Hi</h4></p>
 <h5>I'm <b><u>Afreen Naaz</u></b></h5><br>
 A certified business coach & Meta ads expert.<br><br>
 I am working on Women empowerment in India to support. I am not only foster skills and reliable income but also generate 
 an impressive income 2 lakh in just 3 Month's.
-I dedicated to empowering women, mentoring 250+ girl's through guidance and valuable skills.<br><br></p>
+I dedicated to empowering women, mentoring 250+ girls through guidance and valuable skills.<br><br></p>
 				 <p><b>Business consultant:-</b><br>
 Afreen is  business Consultant & meta ads expert I provides how freelancing can bring in stead income using halal source. 
 I teach practical  skills . My working experience show the really care about making work better for every one.</p><br>
@@ -129,40 +129,8 @@ Many girls are learning  & growing with me</p><br><br><br><br><br>
                     </div>
                 </div>
             </div>
-        </div><br><br><br><br><br>
-        <div class="project-count-area pb-70 pt-100 gray-bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-                        <div class="single-count mb-30 text-center">
-                            <h2 class="count" style="color:#e91e63">18</h2>
-                            <span style="color:#e91e63">Years in Business</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-                        <div class="single-count mb-30 text-center">
-                            <h2 class="count" style="color:#e91e63">290</h2>
-                            <span style="color:#e91e63">Happy People</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-                        <div class="single-count mb-30 text-center">
-                            <h2 class="count" style="color:#e91e63">24</h2>
-                            <span style="color:#e91e63">Billion Sales</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-                        <div class="single-count mb-30 text-center">
-                            <h2 class="count" style="color:#e91e63">17</h2>
-                            <span style="color:#e91e63">Award Winning</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
-		
-		
-		
+       
 		
 		
 		
@@ -181,7 +149,7 @@ Many girls are learning  & growing with me</p><br><br><br><br><br>
 		<div class="team-ara pt-95 pb-70">
             <div class="container">
                 <div class="section-title text-center mb-55">
-                    <h2 style="color:#e91e63">Happy Clients</h2>
+                    <h2 style="color:#e91e63"><u>Happy Clients</u></h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-6">
@@ -254,7 +222,7 @@ Many girls are learning  & growing with me</p><br><br><br><br><br>
 		
 		<div class="food-category food-category-col pt-100 pb-60">
 				 <div class="section-title text-center mb-55">
-                    <h2 style="color:#e91e63">Achievements</h2>
+                    <h2 style="color:#e91e63"><u>Achievements</u></h2>
                 </div>
             <div class="container">
                 <div class="row">
@@ -302,7 +270,7 @@ Many girls are learning  & growing with me</p><br><br><br><br><br>
 		
 		 <div class="contact-area pt-100 pb-100">
 		  <div class="section-title text-center mb-55">
-                    <h2 style="color:#e91e63">Contact Us</h2>
+                    <h2 style="color:#e91e63"><u>Contact Us</u></h2>
                 </div>
             <div class="container">
                 <div class="row">
