--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ I'm <b><u>Afreen Naaz</u></b><br>
 A certified business coach & Meta ads expert.<br><br>
 I am working on Women empowerment in India to support. I am not only foster skills and reliable income but also generate 
 an impressive income 2 lakh in just 3 Month's.
-I dedicated to empowering women, mentoring 250+ girl's through guidance and valuable skills.<br><br></p>
+I dedicated to empowering women, mentoring 250+ girls through guidance and valuable skills.<br><br></p>
 				 <p><b>Business consultant:-</b><br>
 Afreen is  business Consultant & meta ads expert I provides how freelancing can bring in stead income using halal source. 
 I teach practical  skills . My working experience show the really care about making work better for every one.</p><br>
